<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.DeviceDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:listDivider"
        android:dividerPadding="15dp"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/itemAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Alias" />
                <TextView
                    android:id="@+id/textAlias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:text="Device A" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_edit_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name" />
            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="Device A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Device Type" />
            <TextView
                android:id="@+id/textDeviceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="Unknown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vendor" />
            <TextView
                android:id="@+id/textVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MAC address" />
            <TextView
                android:id="@+id/textMacAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <Switch
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Enable tracking" />

        <TextView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/primary_text_light"
            android:text="Tracking results" />
        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/primary_text_light"
            android:text="Delete" />
    </LinearLayout>
</ScrollView>